added some things to home page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
                         </li>
+                        <li>
+                            <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -112,14 +115,25 @@
 
                 <!--<h6 class="center light grey-text">About</h6>-->
                 <h3 class="center light orange-text text-darken-4 ">IndNX 4.0</h3>
-                <h5 class="center light orange-text text-darken-4 ">Smart Industries Hackathon</h5>
+                <h5 class="center light orange-text text-darken-4 ">Smart Industries Hackathon (Edition 1)</h5>
 
-                <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
-                    Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph
-                    text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
-                    Paragraph text. Paragraph text. Paragraph text. </p>
+                <p class="center  text-darken-2 padded-top-compact flow-text light">There's a lot of hype about terms like IoT, IIoT, Machine Learning, Artificial Intelligence among institute
+                    and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has
+                    come up with a unique Industry-Institution interaction event called IndNX 4.0 - Smart Industries Hackathon
+                    (Edition 1).</p>
             </div>
         </section>
+
+
+
+
+        <div class="container center padded-bottom-cozy">
+
+
+            <img src="images/things.png" alt="bfdgbjdg" style="max-width: 90vw;">
+
+
+        </div>
 
 
         <div class="divider"></div>
@@ -151,6 +165,27 @@
 
         <div class="divider"></div>
 
+        <section>
+            <div class="container center padded-bottom-cozy">
+
+
+
+                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">Objectives</h3>
+
+                <p class="flow-text light">
+                    Bridging increasing gap between academic institutions and corporate world.
+                    <br> Providing exposure to newer technologies and engineering methodologies.
+                    <br> Letting students learn from the market leaders themselves.
+                    <br> Exploring the latest innovations in the Internet of Things arena.</p>
+
+
+            </div>
+
+        </section>
+
+
+        <div class="divider"></div>
+
 
         <div class="parallax-container">
 
@@ -158,7 +193,8 @@
                 <div class="container full-width">
 
                     <h3 class="light center white-text">Register</h3>
-                    <p class="center light white-text">Ssome details about registeration if any.</p>
+                    <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
+                  -->
                     <p class="center">
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                     </p>
@@ -179,7 +215,7 @@
 
 
 
-
+        <!--
 
 
         <section class="padded-top-cozy padded-bottom-cozy">
@@ -290,6 +326,98 @@
             </div>
 
         </section>
+
+    -->
+
+        <section>
+            <div class="container center padded-bottom-cozy">
+
+
+
+                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">How IndNX 4.0 is different?</h3>
+
+                <div class="row">
+                    <div class="col s12 l6">
+                        <h4 class="center light">Traditional Events</h4>
+                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
+                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
+                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
+                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
+                    </div>
+                    <div class="col s12 l6">
+                        <h4 class="center light">Conference on IIOT</h4>
+                        <p class="flow-text light green-text">ggggggggggggggg</p>
+                        <p class="flow-text light green-text">ggggggggggggggg</p>
+                        <p class="flow-text light green-text">ggggggggggggggg</p>
+                        <p class="flow-text light green-text">ggggggggggggggg</p>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
+
+        <div class="divider"></div>
+
+
+        <section>
+            <div class="container center padded-bottom-cozy">
+
+
+
+                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">Institute Benefits</h3>
+
+                <p class="flow-text light">
+                    Exposure to newer technologies and engineering methodologies
+                    <br> Opportunity to present project prototype on the conference day
+                    <br> Chance to get noticed by Industrialists/Mentors/Investors
+                    <br> Chance of patenting the idea with the help of CII
+                    <br> Chance of investor funding for project idea
+                    <br> Opportunity to get mentorship or internship offer from the companies
+                    <br> CII certificate mentioning project rank and the evaluation procedure followed
+                    <br> Extensive support from industry leaders
+                    <br> Each team to be mentored by a technology expert and an industry expert
+                    <br> Aligning branding strategy with academic mission
+                </p>
+
+
+            </div>
+
+        </section>
+
+        <div class="divider"></div>
+
+
+        <section>
+            <div class="container center padded-bottom-cozy">
+
+
+
+                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">Industry Benefits</h3>
+
+                <p class="flow-text light padded-bottom-cozy">
+                    Letting business decision makers know how IoT can help in taking their organization forward
+                    <br> Connect with interesting people and create new business
+                    <br> Good opportunity to network with peers
+                    <br> Create new revenue opportunities and drive business transformation
+                    <br> Encounter forward thinking IoT enthusiasts
+                </p>
+
+                <div class="divider"></div>
+
+                <h3 class="light center orange-text text-darken-4 padded-top-cozy">Register</h3>
+                <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
+                -->
+                <p class="center">
+                    <a href="https://reg.form.link" class="orange btn btn-register-hero btn-large btn-flat hoverable white-text">Register now</a>
+                </p>
+
+            </div>
+
+        </section>
+
+
 
 
         <div class="divider"></div>
