--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
     <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
-                <div class="col l6 s6">
-                    <h5 class="black-text">INDnX 4.0</h5>
-                    <p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
-                        from diffrent sectors and Institutes</p>
+                <div class="col l s6">
+                    <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
+                    <!--<p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
+                        from diffrent sectors and Institutes</p>-->
                 </div>
                 <div class="col l1 offset-l2 s3">
                     <h5 class="black-text">Sitemap</h5>
@@ -514,7 +514,7 @@
         <div class="footer-copyright">
             <div class="container">
                 <a href="https://dayshmookh.github.io/" class="black-text" target="_blank">© 2018 R00T INC.</a>
-                <a class="black-text right" href="#!">More Links</a>
+                <!--<a class="black-text right" href="#!">More Links</a>-->
             </div>
         </div>
     </footer>
