mentor and hackathon

--- a/mentors.html
+++ b/mentors.html
@@ -96,7 +96,7 @@
 
         <div class="center">
             <h5>NOTE</h5>
-            <h6>Every team will be alloted mentor depending upon thier needs</h6>
+            <h6>Each team will be allotted a technology mentor,<br> <br> an industry mentor and an institute mentor for guiding them implement the protoype. <br> <br> The mentors would be from following companies</h6>
         </div>
         <br>
         <div class="divider" id="divider">
@@ -106,6 +106,27 @@
         <section class="padded-top-cozy padded-bottom-cozy">
             <div class="container">
                 <h2 class="center orange-text" data-aos="zoom-in">TECH MENTOR</h2>
+            <div>
+                <br>
+                <br>
+                    <div class="divider" id="line">
+
+                        </div>
+
+        <h2 class="center" style="color: orange" data-aos="zoom-in">Partners</h2>
+        <br>
+         <div class="container">
+             <div class="row">
+                 <img src="images/partners/tata.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+                 <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+                 <img src="images/partners/tata.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+                 <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+             </div>
+         </div>
+
+    </div>
+    <br>
+     </div>
 
                 <div class="row padded-top-comfortable">
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -113,7 +134,11 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
+
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -121,7 +146,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -129,7 +157,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -137,7 +168,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -145,7 +179,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -153,7 +190,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -166,6 +206,23 @@
         <section class="padded-top-cozy padded-bottom-cozy">
             <div class="container">
                 <h2 class="center orange-text" data-aos="zoom-in">INDUSTRY MENTOR</h2>
+                <br>
+                <br>
+                <br>
+                <div class="divider" id="line">
+
+                    </div>
+
+    <h2 class="center" style="color: orange" data-aos="zoom-in">Partners</h2>
+    <br>
+     <div class="container">
+         <div class="row">
+             <img src="images/partners/tata.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+             <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+             <img src="images/partners/tata.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+             <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+         </div>
+     </div>
 
                 <div class="row padded-top-comfortable">
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -173,7 +230,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -181,7 +241,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -189,7 +252,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -197,7 +263,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -205,7 +274,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
@@ -213,7 +285,10 @@
                             <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                            <div>
+                                <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                                <h5 class="light center" >Company Name</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
