--- a/hackathon.html
+++ b/hackathon.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/hackathon.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 
     <!-- <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> -->
 
@@ -94,10 +94,8 @@
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
 
-                        <h1 class="light center white-text">Smart Industries Hackathon</h1>
-                        <p class="center">
-                            <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                        </p>
+                        <h1 class="light center white-text">SMART INDUSTRIAL HACKATHON</h1>
+
 
                     </div>
                 </div>
@@ -109,7 +107,7 @@
 
 
 
-        <section class="padded-top-cozy padded-bottom-cozy">
+        <!-- <section class="padded-top-cozy padded-bottom-cozy">
             <div class="container">
                 <div class="row">
                     <div class="col s6 m8 push-m2 l6 push-l3 full-width rounded grey lighten-2">
@@ -149,27 +147,48 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
+        <br>
+        <p class="center">
+            <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat orange-text">Register now</a>
+        </p>
+        <br>
+        <div class="row">
+            <div class="col s6 center">
+                <h4 class="orange-text">Event Dates</h4>
+                <div class="divider" id="eventdivider"></div>
+                <p id="dates">Hackathon Registration - 5th July - 15th July
+                    <br> Prototype Implementation - <span class="orange-text">16th July - 13th September</span> <br>Project Submission - <span class="orange-text">14th September</span> <br>Project Presentation - <span class="orange-text">17th September - 21st September</span>
+                </p>
+
+                <br>
+
+            </div>
+            <div class="col s6 center">
+                <h4 class="orange-text">Event Venue</h4>
+                <div class="divider" id="eventdivider"></div>
+                <p id="venue"><span class="orange-text">TCS</span> Mihan</p>
+            </div>
+        </div>
         <div class="divider" x></div>
 
 
         <section class="padded-cozy">
-            <h3 class="orange-text text-lighten-2 center padded-bottom-cozy">Prizes</h3>
+            <h3 class="orange-text center padded-bottom-cozy">Prizes</h3>
 
             <div class="container">
                 <div class="row">
                     <div class="col s12 l4">
                         <div class="center">
                             <div class="prize">
-                                <svg aria-hidden="true" data-prefix="fas" data-icon="trophy-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
-                                    class="amber-text  svg-inline--fa fa-trophy-alt fa-w-18">
+                                <svg aria-hidden="true" data-prefix="fas" data-icon="trophy-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="amber-text  svg-inline--fa fa-trophy-alt fa-w-18">
                                     <path fill="currentColor" d="M552 64H448V24c0-13.3-10.7-24-24-24H152c-13.3 0-24 10.7-24 24v40H24C10.7 64 0 74.7 0 88v56c0 66.5 77.9 131.7 171.9 142.4C203.3 338.5 240 360 240 360v72h-48c-35.3 0-64 20.7-64 56v12c0 6.6 5.4 12 12 12h296c6.6 0 12-5.4 12-12v-12c0-35.3-28.7-56-64-56h-48v-72s36.7-21.5 68.1-73.6C498.4 275.6 576 210.3 576 144V88c0-13.3-10.7-24-24-24zM64 144v-16h64.2c1 32.6 5.8 61.2 12.8 86.2-47.5-16.4-77-49.9-77-70.2zm448 0c0 20.2-29.4 53.8-77 70.2 7-25 11.8-53.6 12.8-86.2H512v16zm-127.3 4.7l-39.6 38.6 9.4 54.6c1.7 9.8-8.7 17.2-17.4 12.6l-49-25.8-49 25.8c-8.8 4.6-19.1-2.9-17.4-12.6l9.4-54.6-39.6-38.6c-7.1-6.9-3.2-19 6.7-20.5l54.8-8 24.5-49.6c4.4-8.9 17.1-8.9 21.5 0l24.5 49.6 54.8 8c9.6 1.5 13.5 13.6 6.4 20.5z"
                                         class=""></path>
                                 </svg>
 
                                 <h4 class="center amber-text ">Rs. 50,000</h4>
 
-                                <h5 class="center light orange-text text-darken-2">First Prize</h5>
+                                <h5 class="center light orange-text">First Prize</h5>
                             </div>
                         </div>
                     </div>
@@ -177,15 +196,14 @@
                     <div class="col s12 l4">
                         <div class="center">
                             <div class="prize">
-                                <svg aria-hidden="true" data-prefix="fas" data-icon="trophy-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
-                                    class="grey-text svg-inline--fa fa-trophy-alt fa-w-18">
+                                <svg aria-hidden="true" data-prefix="fas" data-icon="trophy-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="grey-text svg-inline--fa fa-trophy-alt fa-w-18">
                                     <path fill="currentColor" d="M552 64H448V24c0-13.3-10.7-24-24-24H152c-13.3 0-24 10.7-24 24v40H24C10.7 64 0 74.7 0 88v56c0 66.5 77.9 131.7 171.9 142.4C203.3 338.5 240 360 240 360v72h-48c-35.3 0-64 20.7-64 56v12c0 6.6 5.4 12 12 12h296c6.6 0 12-5.4 12-12v-12c0-35.3-28.7-56-64-56h-48v-72s36.7-21.5 68.1-73.6C498.4 275.6 576 210.3 576 144V88c0-13.3-10.7-24-24-24zM64 144v-16h64.2c1 32.6 5.8 61.2 12.8 86.2-47.5-16.4-77-49.9-77-70.2zm448 0c0 20.2-29.4 53.8-77 70.2 7-25 11.8-53.6 12.8-86.2H512v16zm-127.3 4.7l-39.6 38.6 9.4 54.6c1.7 9.8-8.7 17.2-17.4 12.6l-49-25.8-49 25.8c-8.8 4.6-19.1-2.9-17.4-12.6l9.4-54.6-39.6-38.6c-7.1-6.9-3.2-19 6.7-20.5l54.8-8 24.5-49.6c4.4-8.9 17.1-8.9 21.5 0l24.5 49.6 54.8 8c9.6 1.5 13.5 13.6 6.4 20.5z"
                                         class=""></path>
                                 </svg>
 
                                 <h4 class="center grey-text">Rs. 30,000</h4>
 
-                                <h5 class="center light orange-text text-darken-2">Second Prize</h5>
+                                <h5 class="center light orange-text">Second Prize</h5>
                             </div>
                         </div>
                     </div>
@@ -193,15 +211,14 @@
                     <div class="col s12 l4">
                         <div class="center">
                             <div class="prize">
-                                <svg aria-hidden="true" data-prefix="fas" data-icon="trophy-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
-                                    class="brown-text svg-inline--fa fa-trophy-alt fa-w-18">
+                                <svg aria-hidden="true" data-prefix="fas" data-icon="trophy-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="brown-text svg-inline--fa fa-trophy-alt fa-w-18">
                                     <path fill="currentColor" d="M552 64H448V24c0-13.3-10.7-24-24-24H152c-13.3 0-24 10.7-24 24v40H24C10.7 64 0 74.7 0 88v56c0 66.5 77.9 131.7 171.9 142.4C203.3 338.5 240 360 240 360v72h-48c-35.3 0-64 20.7-64 56v12c0 6.6 5.4 12 12 12h296c6.6 0 12-5.4 12-12v-12c0-35.3-28.7-56-64-56h-48v-72s36.7-21.5 68.1-73.6C498.4 275.6 576 210.3 576 144V88c0-13.3-10.7-24-24-24zM64 144v-16h64.2c1 32.6 5.8 61.2 12.8 86.2-47.5-16.4-77-49.9-77-70.2zm448 0c0 20.2-29.4 53.8-77 70.2 7-25 11.8-53.6 12.8-86.2H512v16zm-127.3 4.7l-39.6 38.6 9.4 54.6c1.7 9.8-8.7 17.2-17.4 12.6l-49-25.8-49 25.8c-8.8 4.6-19.1-2.9-17.4-12.6l9.4-54.6-39.6-38.6c-7.1-6.9-3.2-19 6.7-20.5l54.8-8 24.5-49.6c4.4-8.9 17.1-8.9 21.5 0l24.5 49.6 54.8 8c9.6 1.5 13.5 13.6 6.4 20.5z"
                                         class=""></path>
                                 </svg>
 
                                 <h4 class="center brown-text">Rs. 20,000</h4>
 
-                                <h5 class="center light orange-text text-darken-2">Third Prize</h5>
+                                <h5 class="center light orange-text">Third Prize</h5>
                             </div>
                         </div>
                     </div>
@@ -221,7 +238,7 @@
 
         <section class="padded-top-cozy padded-bottom-cozy ">
             <div id="domain">
-                <h3 class="orange-text text-lighten-2 center ">Domains</h3>
+                <h3 class="orange-text center ">Domains</h3>
                 <p class="center light flow-text">
                     1. Life Science, Textile, Healthcare & Pharmacy
                     <br> 2. Automobile, Defence & Aerospace
@@ -246,7 +263,7 @@
 
         <section>
             <div class="container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text text-lighten-2 center padded-bottom-comfortable">Guidelines</h3>
+                <h3 class="orange-text center padded-bottom-comfortable">Guidelines</h3>
 
                 <p>
 
@@ -259,24 +276,17 @@
             </div>
         </section>
 
-<div class="divider"></div>
+        <div class="divider"></div>
 
-        <section >
+        <section>
             <div class="container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text text-lighten-2 center padded-bottom-cozy">Technology info</h3>
+                <h3 class="orange-text center padded-bottom-cozy">Technology info</h3>
 
                 <p>
 
 
 
-                    For developers Contribute! To contribute, you’ll need to be able to produce builds for your device. Pick your device from
-                    our list of supported devices to get started. Once you’re successfully running your own build, you can
-                    begin to make your changes. All the apps included in LineageOS can be found in packages/apps, and core
-                    parts of the system can be found in frameworks/base. Once you’ve finished making your change, simply
-                    follow our guide on submitting to Gerrit. Submit your port! If you unofficially maintain a device, and
-                    think it’s good enough to go live, follow our instructions on submitting a port. One of our developer
-                    relations staff will reach out to you, and we’ll work to get the ball rolling on official builds for
-                    your device.
+                    For developers Contribute! To contribute, you’ll need to be able to produce builds for your device. Pick your device from our list of supported devices to get started. Once you’re successfully running your own build, you can begin to make your changes. All the apps included in LineageOS can be found in packages/apps, and core parts of the system can be found in frameworks/base. Once you’ve finished making your change, simply follow our guide on submitting to Gerrit. Submit your port! If you unofficially maintain a device, and think it’s good enough to go live, follow our instructions on submitting a port. One of our developer relations staff will reach out to you, and we’ll work to get the ball rolling on official builds for your device.
 
 
                 </p>
@@ -295,7 +305,7 @@
 
         <section>
             <div class="row container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text text-lighten-2 center padded-bottom-cozy">Problem Statements</h3>
+                <h3 class="orange-text center padded-bottom-cozy">Problem Statements</h3>
 
 
 
@@ -436,7 +446,7 @@
             accordion: false
         });
 
-        $(document).ready(function () {
+        $(document).ready(function() {
 
 
             $('.prize').tilt({
@@ -446,6 +456,7 @@
                 //maxGlare: 0.4 // From 0 - 1.
             });
         });
+
     </script>
 
 </body>
