--- a/conference.html
+++ b/conference.html
@@ -47,6 +47,9 @@
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
                         </li>
+                        <li>
+                            <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -69,6 +72,12 @@
             </li>
             <li>
                 <a class="waves-effect" href="contact.html">Contact</a>
+            </li>
+            <li>
+                <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
+            </li>
+            <li>
+                <a href="https://reg.form.link" class="btn orange white-text">Register</a>
             </li>
         </ul>
 
