--- a/faq.html
+++ b/faq.html
@@ -49,6 +49,12 @@
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="contact.html">Contact</a>
                         </li>
+                        <li>
+                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
+                        </li>
+                        <li>
+                            <a href="https://reg.form.link" class="btn orange white-text">Register</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -71,6 +77,12 @@
             </li>
             <li>
                 <a class="waves-effect" href="contact.html">Contact</a>
+            </li>
+            <li>
+                <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
+            </li>
+            <li>
+                <a href="https://reg.form.link" class="btn orange white-text">Register</a>
             </li>
         </ul>
     </header>
