--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
 
             <div class="col s12 m6 ">
 
-                <h3 class="center light padded-top-cozy orange-text text-darken-4">Contact us</h3>
+                <h3 class="center light padded-top-cozy orange-text">Contact us</h3>
 
 
                 <form class="container">
@@ -152,8 +152,6 @@
 
         </div>
 
-
-
         <div class="divider"></div>
 
         <!-- Map -->
@@ -163,8 +161,6 @@
             <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
 
         </section>
-
-
 
     </main>
 
