--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h3 class="center light orange-text text-darken-4 ">IndNX 4.0</h3>
-                <h5 class="center light orange-text text-darken-4 ">Smart Industries Hackathon (Edition 1)</h5>
+                <h3 class="center orange-text "data-aos="zoom-in">IndNX 4.0</h3>
+                <h5 class="center orange-text "data-aos="zoom-in">Smart Industries Hackathon (Edition 1)</h5>
 
                 <p class="center  text-darken-2 padded-top-compact flow-text light">There's a lot of hype about terms like IoT, IIoT, Machine Learning, Artificial Intelligence among institute
                     and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has
@@ -170,7 +170,7 @@
 
 
 
-                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">Objectives</h3>
+                <h3 class="center orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">Objectives</h3>
 
                 <p class="flow-text light">
                     Bridging increasing gap between academic institutions and corporate world.
@@ -334,7 +334,7 @@
 
 
 
-                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">How IndNX 4.0 is different?</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">How IndNX 4.0 is different?</h3>
 
                 <div class="row">
                     <div class="col s12 l6">
@@ -366,7 +366,7 @@
 
 
 
-                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">Institute Benefits</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">Institute Benefits</h3>
 
                 <p class="flow-text light">
                     Exposure to newer technologies and engineering methodologies
@@ -394,7 +394,7 @@
 
 
 
-                <h3 class="center light orange-text text-darken-4 padded-bottom-compact padded-top-cozy">Industry Benefits</h3>
+                <h3 class="center orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">Industry Benefits</h3>
 
                 <p class="flow-text light padded-bottom-cozy">
                     Letting business decision makers know how IoT can help in taking their organization forward
@@ -406,7 +406,7 @@
 
                 <div class="divider"></div>
 
-                <h3 class="light center orange-text text-darken-4 padded-top-cozy">Register</h3>
+                <h3 class="light center orange-text padded-top-cozy"data-aos="zoom-in">Register</h3>
                 <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
                 -->
                 <p class="center">
@@ -424,7 +424,7 @@
 
         <section class="padded-comfortable">
 
-            <h3 class="center light orange-text text-darken-4 padded-bottom-comfortable">Partners</h3>
+            <h3 class="center light orange-text padded-bottom-comfortable"data-aos="zoom-in">Partners</h3>
             <div class="container">
                 <div class="row">
                     <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
