--- a/conference.html
+++ b/conference.html
@@ -122,52 +122,30 @@
         </section>
  -->
 
-        <section class="padded-cozy">
-            <div class="container">
-                <div class="row">
-                    <div class="col s12 m8 push-m2 l6 push-l3 full-width rounded grey lighten-2">
-                        <!-- <div class=" grey lighten-2">
-            <span class="left orange-text text-lighten-2">
-                <i class="material-icons">calendar_today</i> July 27, 2018</span>
-            <span class="right orange-text text-lighten-2"><i class="material-icons">location_on</i> TCS Mihan</span>
-        </div> -->
+        <br>
+        <p class="center">
+            <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat" id="registerbtn">Register now</a>
+        </p>
+        <br>
+        <div class="row">
+            <div class="col s12 l6 center">
+                <h4 class="orange-text">Event Dates</h4>
+                <div class="divider" id="eventdivider"></div>
+                <p class="light" id="date">Conference Day - <span class="orange-text">28th sept </span>
 
-                        <h4 class="orange-text text-darken-2 center light padded-compact">Schedule</h4>
+                </p>
 
-                        <h5 class="center grey-text text-darken-2 light">registration deadline
-                            <br>
-                            <span class="grey-text text-darken-4">21 july 2018</span>
-                        </h5>
-                        <h5 class="center grey-text text-darken-2 light">registration deadline
-                            <br>
-                            <span class="grey-text text-darken-4">21 july 2018</span>
-                        </h5>
-                        <h5 class="center grey-text text-darken-2 light">registration deadline
-                            <br>
-                            <span class="grey-text text-darken-4">21 july 2018</span>
-                        </h5>
+                <br>
 
-                        <div class="divider"></div>
-
-                        <h4 class="orange-text text-darken-2 center light padded-bottom-compact  padded-top-compact">Venue</h4>
-
-                        <h5 class="center grey-text text-darken-2 light">registration deadline
-                            <br>
-                            <span class="grey-text text-darken-4">21 july 2018</span>
-                        </h5>
-                        <h5 class="center grey-text text-darken-2 light">registration deadline
-                            <br>
-                            <span class="grey-text text-darken-4">21 july 2018</span>
-                        </h5>
-                        <h5 class="center grey-text text-darken-2 light">registration deadline
-                            <br>
-                            <span class="grey-text text-darken-4">21 july 2018</span>
-                        </h5>
-                        <div class="padded-bottom-cozy"></div>
-                    </div>
-                </div>
             </div>
-        </section>
+            <div class="col s12 l6 center">
+                <h4 class="orange-text">Event Venue</h4>
+                <div class="divider" id="eventdivider"></div>
+                <p  class="light " id="venue"><span class="orange-text">TCS</span> Mihan</p>
+            </div>
+        </div>
+        <div class="divider" x></div>
+
 
 
         <div class="divider"></div>
@@ -192,7 +170,7 @@
 
         <section class="padded-top-comfortable padded-bottom-comfortable">
 
-            <h2 class="center light orange-text padded-bottom-comfortable ">Speakers</h2>
+            <h2 class="center light orange-text padded-bottom-comfortable "data-aos="zoom-in">Speakers</h2>
 
 
             <div class="row container">
@@ -255,7 +233,7 @@
 
         <section class="padded-top-comfortable padded-bottom-comfortable">
             <div class="row container">
-                <h2 class="center light orange-text padded-bottom-comfortable">Topics</h2>
+                <h2 class="center light orange-text padded-bottom-comfortable"data-aos="zoom-in">Topics</h2>
                 <ul class="collapsible expandable">
                     <li>
                         <div class="collapsible-header valign-wrapper   ">
