--- a/conference.html
+++ b/conference.html
@@ -180,7 +180,7 @@
                             <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                            <span class="light orange-text card-title">Speaker name</span>
                             <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no
                                 on really cares about but it is important to show</p>
                         </div>
@@ -192,7 +192,7 @@
                             <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                            <span class="light orange-text card-title">Speaker name</span>
                             <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no
                                 on really cares about but it is important to show</p>
                         </div>
@@ -206,7 +206,7 @@
                             <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                            <span class="light orange-text card-title">Speaker name</span>
                             <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no
                                 on really cares about but it is important to show</p>
                         </div>
@@ -218,7 +218,7 @@
                             <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                         </div>
                         <div class="card-content">
-                            <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                            <span class="light orange-text card-title">Speaker name</span>
                             <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no
                                 on really cares about but it is important to show</p>
                         </div>
