--- a/hackathon.html
+++ b/hackathon.html
@@ -261,25 +261,10 @@
                     <br> 7. Government & Citizen Services
 
                 </p>-->
-                <div class="row container padded-compact">
-                    <div class="col s12 m6 l4" id="domainthree">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="images/agriculture-farm-farming-39511.jpg">
-                                <span class="card-title">Agriculture & <br> Food Processing</span>
-                            </div>
-                            <!--<div class="card-content">
-                                <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
-                              </div>-->
-                        </div>
-                    </div>
-                    <div class="col s4 m6 l4 blue" id="domainthree">
-
-                    </div>
-                    <div class="col s4 m6 l4 red" id="domainthree">
-
-                    </div>
+                <div class="container center padded-top-compact">
+                    
+                        <img src="images/domain.png" alt="" style="max-width: 90vw;">
+                  
                 </div>
             </div>
 
@@ -471,7 +456,7 @@
     <script src="js/materialize.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/tilt.jquery.min.js"></script>
-
+<script src="js/script.js"></script>
     <script>
         var elem = document.querySelector('.collapsible.expandable');
         var instance = M.Collapsible.init(elem, {
