--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,8 @@
         <div class="row" style="margin: 0">
 
 
-            <div class="col s12 m6 more-screen-height" style="padding-left: 0;">
-                <div class="parallax-container full-height">
+            <div class="col s12 m6" style="padding-left: 0; height: 100px;">
+                <div class="parallax-container">
                     <div class="parallax">
                         <img src="images/11111.jpg" class="dark" data-aos="flip-up">
                     </div>
@@ -109,7 +109,7 @@
 
             <div class="col s12 m6 ">
 
-                <h3 class="center light padded-top-cozy orange-text">Contact us</h3>
+                <h3 class="center light orange-text">Contact us</h3>
 
 
                 <form class="container">
