--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12 center">
-                            <input type="submit" class="btn btn-large orange darken-3 white-text" value="Submit">
+                            <input type="submit" class="btn btn-large orange white-text" value="Submit">
                         </div>
 
                     </div>
