--- a/index.html
+++ b/index.html
@@ -339,17 +339,19 @@
                 <div class="row">
                     <div class="col s12 l6">
                         <h4 class="center light">Traditional Events</h4>
-                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
-                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
-                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
-                        <p class="flow-text light red-text">hhhhhhhhhhhhhh</p>
+                        <p class="flow-text light red-text">Superficial discussions</p>
+                        <p class="flow-text light red-text">Students are mere spectators</p>
+                        <p class="flow-text light red-text">Students just listen about how to do it</p>
+                        <p class="flow-text light red-text">Business decision makers present their solutions </p>
+                        <p class="flow-text light green-text">No mentoring of students </p>
                     </div>
                     <div class="col s12 l6">
                         <h4 class="center light">Conference on IIOT</h4>
-                        <p class="flow-text light green-text">ggggggggggggggg</p>
-                        <p class="flow-text light green-text">ggggggggggggggg</p>
-                        <p class="flow-text light green-text">ggggggggggggggg</p>
-                        <p class="flow-text light green-text">ggggggggggggggg</p>
+                        <p class="flow-text light green-text">Learn entire approach that goes into building an IoT solution</p>
+                        <p class="flow-text light green-text">Students an important part of the event</p>
+                        <p class="flow-text light green-text">Students would build an end to end IoT solution</p>
+                        <p class="flow-text light green-text">Business decision makers all ears to students' built use-cases</p>
+                        <p class="flow-text light green-text">Students would be mentored by market leaders themselves </p>
                     </div>
                 </div>
 
