--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
             <h3 class="center light orange-text padded-bottom-comfortable"data-aos="zoom-in">Partners</h3>
             <div class="container">
                 <div class="row">
-                    <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
-                    <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
+                    <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
+                    <img src="images/partners/tata.png" alt="sponsor" class="col s6 m4 l3 sponsor">
                     <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
                     <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
                 </div>
